<resources>
    <string name="app_name">LaundryAppProject</string>
    <string name="this_is_company_logo">this is company logo</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="masuk">Masuk</string>
    <string name="login">LOGIN</string>
    <string name="daftar">DAFTAR</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="test">....</string>
    <string name="logout">Logout</string>
    <string name="login_gagal">Login gagal</string>
    <string name="desc1_welcome">WASH.IN merupakan aplikasi\npenyedia jasa yang menghubungkan\npengguna dan mitra laundry</string>
    <string name="desc2_welcome">Fitur yang lengkap dan detail\ndisertai berbagai metode\npembayaran untuk memudahkan\nbertransaksi</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="mulai">Mulai</string>
    <string name="title_place_holder">Title Place Holder</string>
    <string name="oke_laundry">Oke Laundry</string>
    <string name="Lokasi1">Sumbersari, Malang</string>
    <string name="login_desc">Ayo masuk dan buat pakaianmu\njadi bersih sekarang</string>
    <string name="daftar_desc">Belum punya akun?</string>
    <string name="daftar_desc_2">Buat disini!</string>
    <string name="ketik_disini">Ketik disini....</string>
    <string name="nomor_telepon_hp">Nomor Telepon/HP</string>
    <string name="syarat">Saya setuju dengan <u>Persyaratan Layanan</u> dan <u>Kebijakan Privasi</u></string>
    <string name="sudah_akun">Sudah punya akun?</string>
    <string name="masuk_disini">Masuk disini!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_promo">Promo</string>
    <string name="title_order">Order</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="telp">+62 812 3456 7890</string>
    <string name="edit_profile">Edit Profile</string>
</resources>