<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfileFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/profile_picture"
            android:layout_marginStart="30dp"
            android:layout_marginTop="22dp"
            app:civ_border_width="3dp"
            app:civ_border_color="@color/blue"
            app:civ_circle_background_color="@color/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_lengkap"
            android:fontFamily="@font/inter"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toTopOf="@id/iv_profile" />

        <TextView
            android:id="@+id/tv_telp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telp"
            android:fontFamily="@font/montserrat"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_nama" />

        <TextView
            android:id="@+id/tv_editProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:fontFamily="@font/inter"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_telp"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            android:drawablePadding="5dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@id/tv_editProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>